plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.8'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'softeer'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation('org.springframework.boot:spring-boot-starter-validation')
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// mysql
	implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.0.32'

	// jdbc
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'

	// https://mvnrepository.com/artifact/org.mindrot/jbcrypt
	implementation group: 'org.mindrot', name: 'jbcrypt', version: '0.4'

	implementation platform('com.amazonaws:aws-java-sdk-bom:1.11.1000')
	implementation 'com.amazonaws:aws-java-sdk-s3'

	// test DB
	implementation 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}
